--- a/PyBer_ride_data.ipynb
+++ b/PyBer_ride_data.ipynb
@@ -2191,6 +2191,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural         78\n",
+       "Suburban     490\n",
+       "Urban       2405\n",
+       "Name: driver_count, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drivers_counting = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
+    "drivers_counting"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
